fix(iam): users-add modal too tall for small screens ref: MANAGER-16692

--- a/packages/manager/modules/iam/src/iam.styles.scss
+++ b/packages/manager/modules/iam/src/iam.styles.scss
@@ -12,4 +12,9 @@
   .oui-checkbox__label {
     word-break: break-word;
   }
+
+  .oui-modal__body {
+    max-height: 70vh;
+    overflow-y: auto;
+  }
 }
